[project]
name = "safe-hand-rotation"
version = "0.1.0"
description = "Safe RL for in-hand cube rotation: CPO vs PPO on a LEAP hand"
requires-python = ">=3.10"
dependencies = [
    "mjlab",
    "pyzmq>=25",
]

[tool.uv]
package = true

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab" }

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]